# Bug_Bounty_AI_Hunter

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .lychee.toml  AGENTS.md  AUTHORS.md  BUGCROWD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DEEP_RESEARCH_02_COMMAND_CENTER.md  Dockerfile  GOVERNANCE.md  GUIDE.md  MAINTAINERS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRANSCRIPT_01.md  TRANSCRIPT_03.md  TRANSCRIPT_04.md  TRANSCRIPT_05.md  TRANSCRIPT_06.md  bbhai.py  dashboard.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
bounty_board/: README.md
command-center/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.node.json  vitest.config.ts
command_center_api/: __init__.py  app.py  auth.py  compliance.py  db.py  docs_search.py  ingest.py  integrations.py  job_runner.py  notify_channels.py  plugin_sdk.py  secrets_store.py  tool_runner.py  tools.py  visualization.py  workspace.py
components/: README.md
dashboard/: dashboard.css  dashboard.js
data/: README.md  component_registry_index.json  findings_db.json  program_registry.json  workflow_tracker.json
docs/: ADR_COMMAND_CENTER_ARCHITECTURE.md  ARCHITECTURE.md  BUG_BOUNTY_STARTER_WORKFLOW.md  CASE_STUDY_SELECTION.md  CHANGELOG_POLICY.md  COMMAND_CENTER_OPENAPI.yaml  COMMAND_CENTER_TRIAGE.md  COMPONENTS.md  COMPONENT_CONTRACT.md  COMPONENT_MANIFEST.md  COVERAGE_MATRIX.md  ENVIRONMENT.md  EVIDENCE_LOG.md  GOVERNANCE_SECURITY.md  HACK_TYPES.md  IMPROVEMENT_TASKS.md  INGESTION_FEASIBILITY.md  INTEL.md  KNOWLEDGE_FORMAT.md  KNOWLEDGE_INDEX.md  KNOWLEDGE_TAGS.md  LLM_THREAT_MODEL.md  MODULE_BOUNDARIES.md  NOTIFICATIONS.md  OPERATIONS.md  PIPELINE.md  PIPELINE_GUARDRAILS.md  PROGRAM_REGISTRY.md  PROJECT_MANAGEMENT.md  PROJECT_OUTLINE.md  PUBLIC_ONLY_MODE.md  REDACTION_GUIDE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_PLAN.md  REPORTING.md  REPORTING_EXAMPLES.md  RISK_ASSESSMENT.md  ROE.md  SAFE_DEFAULTS.md  (+12 more)
evidence/: README.md  registry.json
examples/: README.md  case_study_selection_output.json  component_manifest.yaml  component_registry_output.json  component_runtime_config.yaml  dataflow_map_example.json  (+44 more)
(+596 files in other folders)
