[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bbhai"
version = "0.1.0"
description = "Docs-first hub for AI bug bounty workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Raven DevOps", email = "support@ravdevops.com" }]
dependencies = []

[project.scripts]
bbhai = "bbhai:main"

[tool.setuptools]
py-modules = ["bbhai"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
