[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bbhai"
version = "0.1.0"
description = "Docs-first hub for AI bug bounty workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Raven DevOps", email = "support@ravdevops.com" }]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.19.0",
  "ruff>=0.3.0",
  "hypothesis>=6.98.0",
  "coverage>=7.4.0",
  "mkdocs>=1.6.0",
]

[project.scripts]
bbhai = "bbhai:main"

[tool.setuptools]
py-modules = ["bbhai"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
