[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bbhai"
version = "0.1.0"
description = "Docs-first hub for AI bug bounty workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Raven DevOps", email = "support@ravdevops.com" }]
dependencies = [
  "jsonschema==4.26.0",
  "pyyaml==6.0.3",
  "fastapi==0.121.0",
  "uvicorn==0.34.0",
]

[project.optional-dependencies]
dev = [
  "jsonschema==4.26.0",
  "ruff==0.14.13",
  "hypothesis==6.150.2",
  "coverage==7.13.1",
  "mkdocs==1.6.1",
  "pip-audit==2.10.0",
  "httpx==0.28.1",
]

[project.scripts]
bbhai = "bbhai:main"

[tool.setuptools]
py-modules = ["bbhai"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "command_center_api*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
